<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/srm_button"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:text="@string/srm_button_text"/>

        <Button
            android:id="@+id/potheri_button"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:text="@string/potheri_button_text"/>

        <Button
            android:id="@+id/guduvancheri_button"
            android:padding="20dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:text="@string/guduvancheri_button_text"/>


    </LinearLayout>


</FrameLayout>
